<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/border_bg"
    android:padding="@dimen/_12sdp">

    <ImageView
        android:id="@+id/ivNoInternet"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        app:layout_constraintTop_toTopOf="@id/imgCross"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/img_no_internet_available" />

    <ImageView
        android:id="@+id/imgCross"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:padding="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/icon_close" />

    <TextView
        android:id="@+id/tvNoInternet"
        android:layout_below="@+id/ivNoInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivNoInternet"
        android:text="@string/internet_not_available"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/text_color"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvCheckInternet"
        android:layout_below="@+id/tvNoInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvNoInternet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/please_check_your_internet_connection"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_13ssp" />

    <TextView
        android:id="@+id/btnConnectNow"
        android:layout_below="@+id/tvCheckInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCheckInternet"
        android:paddingVertical="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_50sdp"
        android:background="@drawable/button_bg"
        android:layout_centerHorizontal="true"
        android:text = "@string/connect_now"
        android:textColor="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>